--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <BODY>
-	<H1>States</H1>	
-	<UL>
-		{% for state in states.value|sort(attribute='name') %}
-		<LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-		 {% endfor %}
-	</UL>
+    <H1>States</H1>	
+    <UL>
+    {% for state in states.values()|sort(attribute="name") %}
+        <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+    {% endfor %}
+    </UL>
 </BODY>
 </html>
